--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^1.3.4",
+    "axios": "^0.27.2",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -55,6 +55,9 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "enzyme": "^3.11.0",
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "jest": "^29.3.1",
+    "jest-cucumber": "^3.0.1",
+    "puppeteer": "18.1.0"
   }
 }
