--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#137DC5",
+  "background_color": "#ddb89b"
 }
